Try fix issues on iOs

--- a/src/styles/ebook.css
+++ b/src/styles/ebook.css
@@ -42,6 +42,9 @@
 	* {
 		box-sizing: border-box;
 	}
+	html {
+		overflow-x: hidden;
+	}
 
 	body {
 		font-family:
